# ipdf-code

./: .gitignore  README
contrib/: vfpu
src/: CMakeLists.txt  Makefile  add_digits_asm.S  add_digits_asm.s  arbint.cpp  arbint.h  bezier.cpp  bezier.h  bufferbuilder.h  callgrind.out.22889  callgrind.out.30764  callgrind.out.5868  common.h  controlpanel.cpp  controlpanel.h  debugscript.cpp  debugscript.h  div_digits_asm.S  div_digits_asm.s  document.cpp  document.h  eye_of_the_rabbit.script  foxzoom.script  framebuffer.cpp  framebuffer.h  gl_core44.cpp  gl_core44.h  gmpint.h  gmprat.h  graphicsbuffer.cpp  graphicsbuffer.h  grid.script  gridtest.script  group.cpp  group.h  ipdf  ipdf.h  log.cpp  log.h  main.cpp  (+37 more)
src/shaders/: basictex_vert.glsl  bezier_texbuf_geom.glsl  circle_filled_geom.glsl  circle_frag.glsl  fonttex_frag.glsl  rect_filled_geom.glsl  rect_frag.glsl  rect_outline_geom.glsl  rect_vert.glsl
src/svg-tests/: create_grid.py
src/tests/: add_digits.s  add_digits_test.c  addsub.cpp  arb.cpp  arbint_vs_gmpint.cpp  arbrationals.cpp  asm.cpp  bezier.cpp  bmpdiff.cpp  calculatepi.cpp  calculator.cpp  fecalculator.cpp  handbook1-1.cpp  lines.cpp  muldiv.cpp  paranoidcalculator.cpp  paranoidtester.cpp  pointstobitmap.h  qtapp.cpp  qtest.cpp  rationalrange.cpp  realops.cpp  realtofloat.cpp  repr.cpp  represent.cpp  runtests.sh  saveload.cpp  stresstest.cpp  stresstest.h  test.xml  vfpufloat.cpp  wrongr.cpp  xml.cpp
tools/: NumericalOperationsPerformanceTests.ipynb  analysis.ipynb  bmpdiff  build.py  common.py  gpubounds.py  gpubounds_error.py  grid_scaling.py  (+5 more)
(+4 files in other folders)
